# advent-of-code

./: .gitignore  2023.tsbuildinfo
2023/: index.ts  index.tsbuildinfo  input.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
2023/1/: 1.ts  2.ts
2023/10/: 1.ts  2.ts
2023/11/: 1.ts  2.ts
2023/12/: 1.ts  2.ts
2023/13/: 1.ts  2.ts
2023/14/: 1.ts  2.ts
2023/15/: 1.ts  2.ts
2023/16/: 1.ts  2.ts
2023/17/: 1.ts  2.ts
2023/18/: 1.ts  2.ts
2023/19/: 19.ts
2023/2/: 1.ts  2.ts
2023/3/: 1.ts  2.ts
2023/4/: 1.ts  2.ts  utils.ts
2023/5/: 1.ts  2.ts
2023/6/: 1.ts  2.ts
2023/7/: 1.ts  2.ts
2023/8/: 1.ts  2.ts
2023/9/: 1.ts  2.ts
2024/: .clang-format  .gitignore  1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  24.h  25.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt  helpers.cpp  helpers.h
2025/: Cargo.toml  README.md
2025/src/: lib.rs
